[package]
name = "texp"
version = "0.2.5"
edition = "2021"

license = "GPL-3.0"
authors = ["fixcix"]
keywords = ["cli", "tera", "templates", "tools"]
categories = ["template-engine", "command-line-utilities", "development-tools"]
description = "texp is a small tool for render templates"
readme = "README.md"
repository = "https://github.com/fixcik/texp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
base64 = { version = "0.22.1", optional = true }
cla = "0.0.1"
clap = { version = "4.5.4", features = ["derive"] }
hmac = { version = "0.12.1", optional = true }
jwt = { version = "0.16.0", optional = true }
rand = "0.8.5"
serde_yaml = "0.9.34"
sha2 = { version = "0.10.8", optional = true }
tera = { version = "1.19.1", features = ["preserve_order"] }

[features]
default = ["jwt", "base64"]
jwt = ["dep:jwt", "dep:hmac", "dep:sha2"]
base64 = ["dep:base64"]
